# disgram

./: .gitignore  ENG_README.md  README.md  config.example.yaml  disgram.py  env_template  pyproject.toml
.github/workflows/: release.yaml
gui/: .gitignore  app.go  bot.go  config.go  go.mod  main.go  proc_unix.go  proc_windows.go  python.go  wails.json
gui/frontend/: index.html  package-lock.json
gui/frontend/src/: App.jsx
gui/frontend/src/components/: Footer.jsx  FormPanel.jsx  LogPanel.jsx  Sidebar.jsx
gui/frontend/src/components/ui/: Field.jsx  Toggle.jsx
gui/frontend/src/styles/: vars.js
modules/: __init__.py  logger.py  media.py  settings.py  utils.py
