[tool.poetry]
name = "disgram"
version = "0.1.0"
description = "Discord/Telegram боты для передачи постов из Telegram канал в Discord канал на сервере"
authors = ["Kirssei"]
readme = "README.md"
packages = [{ include = "kirssei" }]

package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
aiogram = "3.24.0"
py-cord = "2.6.1"
requests = "2.32.5"
ruff = "0.13.0"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"